--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/vuetify": "^1.12.3",
+    "sass": "^1.56.0",
+    "sass-loader": "10"
+  }
 }
